--- a/src/gui/FilterPanel.form
+++ b/src/gui/FilterPanel.form
@@ -880,6 +880,9 @@
       </SubComponents>
     </Container>
     <Component class="javax.swing.JTextField" name="searchTextField">
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="searchTextFieldActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="searchButtonTop">
       <Properties>
