--- a/src/gui/DetailPhoneInfoFrame.form
+++ b/src/gui/DetailPhoneInfoFrame.form
@@ -28,7 +28,7 @@
               <EmptySpace max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
                   <Component id="detailPhoneInfoPanel" alignment="1" min="-2" max="-2" attributes="0"/>
-                  <Component id="closeButton" alignment="1" min="-2" max="-2" attributes="0"/>
+                  <Component id="closeButton" alignment="1" min="-2" pref="74" max="-2" attributes="0"/>
               </Group>
               <EmptySpace max="-2" attributes="0"/>
           </Group>
@@ -38,10 +38,10 @@
       <Group type="103" groupAlignment="0" attributes="0">
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace max="32767" attributes="0"/>
-              <Component id="detailPhoneInfoPanel" min="-2" pref="480" max="-2" attributes="0"/>
+              <Component id="detailPhoneInfoPanel" min="-2" pref="611" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
               <Component id="closeButton" min="-2" max="-2" attributes="0"/>
-              <EmptySpace max="-2" attributes="0"/>
+              <EmptySpace min="-2" pref="6" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
