--- a/src/gui/DetailPhoneInfoPanel.form
+++ b/src/gui/DetailPhoneInfoPanel.form
@@ -19,14 +19,14 @@
           <Group type="102" alignment="0" attributes="0">
               <Component id="phoneImage" min="-2" pref="300" max="-2" attributes="0"/>
               <EmptySpace max="-2" attributes="0"/>
-              <Component id="informationPanel" pref="543" max="32767" attributes="0"/>
+              <Component id="jScrollPane" min="-2" pref="627" max="-2" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
     <DimensionLayout dim="1">
       <Group type="103" groupAlignment="0" attributes="0">
-          <Component id="phoneImage" pref="512" max="32767" attributes="0"/>
-          <Component id="informationPanel" alignment="0" max="32767" attributes="0"/>
+          <Component id="phoneImage" pref="657" max="32767" attributes="0"/>
+          <Component id="jScrollPane" alignment="0" max="32767" attributes="0"/>
       </Group>
     </DimensionLayout>
   </Layout>
@@ -39,12 +39,19 @@
         </Property>
       </Properties>
     </Component>
-    <Container class="javax.swing.JPanel" name="informationPanel">
+    <Container class="javax.swing.JScrollPane" name="jScrollPane">
+      <AuxValues>
+        <AuxValue name="JavaCodeGenerator_CreateCodeCustom" type="java.lang.String" value="new javax.swing.JScrollPane(jList)"/>
+      </AuxValues>
 
-      <Layout class="org.netbeans.modules.form.compat2.layouts.DesignGridLayout">
-        <Property name="columns" type="int" value="1"/>
-        <Property name="rows" type="int" value="0"/>
-      </Layout>
+      <Layout class="org.netbeans.modules.form.compat2.layouts.support.JScrollPaneSupportLayout"/>
+      <SubComponents>
+        <Component class="javax.swing.JList" name="jList">
+          <AuxValues>
+            <AuxValue name="JavaCodeGenerator_TypeParameters" type="java.lang.String" value="&lt;String&gt;"/>
+          </AuxValues>
+        </Component>
+      </SubComponents>
     </Container>
   </SubComponents>
 </Form>
